# channel9

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  README.md  Rakefile  appveyor.yml  default.mspec  simple_tests.rb  test.rb
1.8.7/: string.rb
bytecode/: r18.rb
environment/kernel/: beta.rb  boot.rb  delta.rb
environment/kernel/alpha/: array.rb  basic_hash.c9s  class.c9s  enumerable.rb  finish.c9s  kernel.rb  module.c9s  object.c9s  proc.rb  singletons.rb  static_tuple.rb  string.rb  symbol.rb  tuple.rb
environment/kernel/beta/: array.rb  channel9.rb  class.rb  dir.rb  exceptions.rb  file.rb  fixnum.rb  float.rb  hash.rb  kernel.rb  module.rb  object.rb  range.rb  singletons.rb  static_tuple.rb  string.rb  symbol.rb  time.rb
environment/kernel/boot/: array.rb  class.rb  enumerable.rb  exceptions.rb  file.rb  kernel.rb  module.rb  object.rb  singletons.rb  string.rb  symbol.rb  tuple.rb
environment/kernel/delta/: boot.rb  channel9.rb  class.rb  comparable.rb  dir.rb  file.rb  fixnum.rb  float.rb  hash.rb  io.rb  kernel.rb  module.rb  object.rb  range.rb  regexp.rb  signal.rb  time.rb
environments/ruby/: .gitignore  CMakeLists.txt  Rakefile  default.mspec
environments/ruby/environment/kernel/alpha/: basic_hash.c9s  class.c9s  finish.c9s  object.c9s
environments/ruby/environment/kernel/beta/: array.rb  class.rb  enumerable.rb  kernel.rb  module.rb  proc.rb  singletons.rb  static_tuple.rb  string.rb  symbol.rb  tuple.rb
environments/ruby/environment/kernel/delta/: boot.rb  channel9.rb  class.rb  dir.rb  file.rb  fixnum.rb  io.rb  kernel.rb  module.rb  object.rb  process.rb  range.rb  regexp.rb  string.rb  thread.rb
environments/ruby/environment/site-lib/: rbconfig.rb
environments/ruby/lib/channel9/ruby/: compiler.rb
environments/ruby/perf_tests/: 002.recursive_sum.rb  003.linkedlist.rb
environments/ruby/rubyspec/language/regexp/: anchors_spec.rb
environments/ruby/simple_tests/: 003.load.rb  005.while.rb  006.if.rb  008.const.rb  009.class.rb  010.module.rb  013.dstring.rb  014.ensure.rb  015.case.rb  017.default-args.rb  018.array.rb  019.super.rb  021.masgn.rb  023.cvar.rb  024.dup.rb  025.for.rb  027.hash.rb  028.module.rb  029.regex-match.rb  030.regex-gsub.rb  031.fileio.rb  032.nullbyte.rb  033.string-split.rb  034.array-replace.rb  README
environments/ruby/src/: rb.c9l  rb.cpp  rb_loader.cpp  rb_loader.hpp  rb_regexp.cpp  rb_regexp.hpp
environments/ruby/tags/1.8/language/: array_tags.txt  block_tags.txt  break_tags.txt  case_tags.txt  class_tags.txt  class_variable_tags.txt  constants_tags.txt  def_tags.txt  defined_tags.txt  eigenclass_tags.txt  file_tags.txt  for_tags.txt  hash_tags.txt  line_tags.txt  metaclass_tags.txt  module_tags.txt  next_tags.txt  precedence_tags.txt  predefined_tags.txt  regexp_tags.txt  rescue_tags.txt  retry_tags.txt  return_tags.txt  send_tags.txt  splat_tags.txt  string_tags.txt  super_tags.txt  symbol_tags.txt  throw_tags.txt  until_tags.txt  variables_tags.txt  while_tags.txt  yield_tags.txt
environments/ruby/tags/1.8/language/regexp/: anchors_tags.txt  encoding_tags.txt  interpolation_tags.txt  modifiers_tags.txt  repetition_tags.txt
environments/testext/: CMakeLists.txt  testext.c9l  testext.c9s  testext.cpp
ext/: bittwiddle.h  bittwiddle.hpp  callable_context.cpp  callable_context.hpp  channel9.hpp  channel9ext.cpp  context.cpp  context.hpp  debug.h  environment.cpp  environment.hpp  extconf.rb  forwardtable.hpp  gc_markcompact.cpp  gc_markcompact.hpp  gc_nursery.hpp  gc_semispace.cpp  gc_semispace.hpp  instruction.cpp  instruction.hpp  istream.cpp  istream.hpp  memory_pool.cpp  memory_pool.hpp  message.cpp  message.hpp  primitive.cpp  primitive.hpp  string.cpp  string.hpp  testnan.cpp  time.hpp  trace.cpp  trace.hpp  tuple.cpp  tuple.hpp  value.cpp  value.hpp  variable_frame.cpp  variable_frame.hpp
ext/experiments/: bittwiddle.cpp
include/c9/: bittwiddle.hpp  callable_context.hpp  channel9.hpp  context.hpp  environment.hpp  ffi.hpp  forwardtable.hpp  gc.hpp  gc_markcompact.hpp  gc_nursery.hpp  gc_semispace.hpp  instruction.hpp  istream.hpp  loader.hpp  message.hpp  primitive.hpp  script.hpp  string.hpp  trace.hpp  tuple.hpp  value.hpp  variable_frame.hpp
include/json/: value.h  writer.h
lib/: channel9.rb
lib/channel9/: builder.rb  channel.rb  context.rb  environment.rb  instruction.rb  primitive.rb  ruby.rb  stream.rb
lib/channel9/instruction/: channel_call.rb  channel_new.rb  channel_ret.rb  channel_send.rb  channel_special.rb  debug.rb  dup.rb  frame_get.rb  get_local.rb  is.rb  is_eq.rb  is_not.rb  is_not_eq.rb  jmp.rb  jmp_if.rb  jmp_if_not.rb  lexical_get.rb  lexical_set.rb  local_clean_scope.rb  local_get.rb  local_set.rb  (+26 more)
perf_tests/: 001.fib.rb
ruby/lib/: channel9.rb
sample/: gcd-100.c9b  gcd-10k.c9b  gcd-1k.c9b  gcd-1mil.c9b  gcd.c9b  gcd.c9s  test.c9b
sample/bytecode/: gcd-100.c9b  gcd-10k.c9b  gcd-1k.c9b  gcd-1mil.c9b  gcd.c9b  test.c9b
sample/c9script/: coroutine.c9s  fib-1mil.c9s  fib.c9s  gcd-1mil.c9s  gcd.c9s  hash.c9s
simple_tests/: 002.puts.rb  004.locals.rb  005.while.rb  006.if.out  007.method.rb  009.class.out  009.class.rb  010.module.out  010.module.rb  011.block.out  011.block.rb  012.global.rb  013.dstring.out  014.ensure.out  014.ensure.rb  015.case.out  015.case.rb  016.raise.rb  020.const_scope.rb  022.attrs.rb  026.eval.rb
src/: rb.c9l  rb.cpp  rb_glob.cpp  rb_glob.hpp  rb_loader.cpp  rb_loader.hpp
src/c9/: CMakeLists.txt  c9.cpp
src/jsoncpp/: CMakeLists.txt  json_tool.h  json_value.cpp  json_writer.cpp
src/libc9/: CMakeLists.txt  callable_context.cpp  channel9ext.cpp  context.cpp  environment.cpp  ffi.cpp  gc.cpp  gc_markcompact.cpp  gc_nursery.cpp  gc_semispace.cpp  instruction.cpp  istream.cpp  loader.cpp  memory_pool.cpp  message.cpp  primitive.cpp  script.cpp  string.cpp  trace.cpp  tuple.cpp  value.cpp  variable_frame.cpp
src/libc9/script/: compiler.cpp  compiler.hpp  parser.cpp  parser.hpp
src/testext/: testext.c9b  testext.c9l  testext.cpp
travis/: install-deps-linux.sh  install-deps-osx.sh  run-tests.sh
(+38 files in other folders)
